--- a/index.html
+++ b/index.html
@@ -19,7 +19,23 @@
 <body ng-app="MainModule">
 
 <div class="container">
-    <h1>Record Shop</h1>
+    <div class="row">
+        <div class="col-md-4">
+            <h1>Record Shop</h1>
+        </div>
+        <div class="col-md-4">
+
+        </div>
+        <div class="col-md-2" ng-controller="LoginController" >
+            <br/>
+            <button ng-if="!loggedIn" class="btn btn-info" ng-click="openLoginPage()">Log In</button>
+            <button ng-if="loggedIn" class="btn btn-info" ng-click="logOut()">Log Out</button>
+        </div>
+        <div class="col-md-2">
+
+        </div>
+    </div>
+
 </div>
 
 <ul class="nav nav-tabs" >
